--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   path_provider:
   image_network:
   shimmer: ^3.0.0
+  fluid_bottom_nav_bar: ^1.4.0
   #cubit
   flutter_bloc:
 
@@ -106,6 +107,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/svg/
     - assets/icons/
     - assets/json/
     - assets/translations/ar-EGY.json
